--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <th>Regraded</th>
                           </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
@@ -102,7 +102,7 @@
                             <td>Yes</td>
                         </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
@@ -121,7 +121,7 @@
                             <td>Yes</td>
                         </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
@@ -140,7 +140,7 @@
                             <td>Yes</td>
                         </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
@@ -158,7 +158,7 @@
                             <td>No</td>
                         </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
@@ -176,7 +176,7 @@
                             <td>Yes</td>
                         </tr>
                         <tr>
-                            <td>HW5</td>
+                            <td id="name">HW5</td>
                             <td class="released">
                               <meter min="0" max="100" value="75"></meter>
                               <time>JUL 26 AT 12:00 AM</time>
